# LangPerf

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_baseline.py  0002_agents.py  0003_backfill_agents.py  0004_trajectory_system_prompt.py  0005_backfill_system_prompt.py  0006_trajectory_token_split.py  0007_backfill_token_split.py  0008_workspace_settings.py  0009_auth_identity.py  0010_collab_primitives.py  0011_triage_heuristics.py  0012_rewrites.py  0013_created_at_defaults.py  0014_updated_tagged_defaults.py  0015_agent_tokens.py  0016_projects.py  0017_feedback_and_completion.py  0017_sentinel_audit_tables.py  0018_sentinel_agent_identities.py  0019_sentinel_ingest_nodes.py  0020_sentinel_audit_entry_refs.py
api/app/: agent_naming.py  constants.py  db.py  main.py  models.py  schemas.py
api/app/api/: agents.py  auth.py  clusters.py  comments.py  failure_modes.py  feedback.py  logs.py  nodes.py  notifications.py  overview.py  projects.py  reviewers.py  rewrites.py  runs.py  settings.py  shared_links.py  trajectories.py  triage.py
api/app/audit/: canonical.py  crypto.py  hashing.py  leader.py  merkle.py  writer.py
api/app/audit/anchor/: base.py  none_anchor.py  offline_file.py  rfc3161.py
api/app/auth/: agent_token.py  deps.py  mode.py  password.py  session.py
api/app/cli/: backfill_heuristics.py
api/app/heuristics/: __init__.py  apology_phrase.py  baselines.py  engine.py  latency_outlier.py  loop.py  low_confidence.py  tool_error.py  types.py
api/app/ingest/: hook.py  org.py
api/app/logs/: __init__.py  buffer.py  file_forwarder.py  handler.py
api/app/otlp/: agent_resolver.py  attrs.py  decoder.py  grouping.py  ingest.py  latency_series.py  receiver.py
api/app/projects/: helpers.py
api/app/services/: agent_failures.py  agent_metrics.py  agent_profile.py  agent_timeseries.py  agent_worklist.py  agents.py  audit.py  cluster.py  comments.py  failure_modes.py  mentions.py  overview.py  projects.py  rewrites.py  runs.py  trajectories.py
api/tests/: conftest.py  test_agent_failures_csv.py  test_agent_profile_render.py  test_agent_project_assignment.py  test_agent_timeseries.py  test_agent_token_helpers.py  test_api_agents_crud.py  test_api_auth.py  test_api_clusters.py  test_api_comments.py  test_api_failure_modes.py  test_api_feedback.py  test_api_logs.py  test_api_nodes.py  test_api_notifications.py  test_api_overview.py  test_api_projects.py  test_api_reviewers.py  test_api_rewrites.py  test_api_runs.py  test_api_settings.py  test_api_shared_links.py  test_api_trajectories.py  test_api_triage.py  test_auth_deps.py  test_auth_mode.py  test_auth_password.py  test_auth_session.py  test_cluster.py  test_completed_ingest.py  test_ingest_hook.py  test_mentions.py  test_migration_0009.py  test_migration_0010.py  test_migration_0011.py  test_migration_0012.py  test_models_comment.py  test_models_failure_mode.py  test_models_heuristic_hit.py  test_models_notification.py  (+14 more)
api/tests/audit/: test_anchor_base.py  test_anchor_offline_file.py  test_anchor_rfc3161.py  test_audit_chain_continuity.py  test_audit_e2e.py  test_audit_roots.py  test_audit_service.py  test_canonical.py  test_crypto.py  test_hashing.py  test_leader.py  test_merkle.py  test_migration_append_only.py  test_models.py  test_writer.py
api/tests/heuristics/: test_apology_phrase.py  test_baselines.py  test_engine.py  test_latency_outlier.py  test_loop.py  test_low_confidence.py  test_tool_error.py  test_types.py
docs/: ROADMAP.md  vision.md
examples/: code_helper.py  durable_agent.py  lm_studio_agent.py  weather_bot.py
scripts/: demo_tracer.py  lint-python.sh  seed_demo_data.py  smoke.py
sdk/: ATTRIBUTES.md  CHANGELOG.md  README.md  pyproject.toml
sdk/langperf/: __init__.py  _baggage.py  attributes.py  feedback.py  instrumentation.py  marks.py  node.py  signature.py  tool.py  tracer.py  trajectory.py
sdk/tests/: conftest.py  test_feedback.py  test_marks.py  test_node.py  test_tool.py  test_trajectory.py  test_trajectory_completed.py  test_trajectory_resume.py
web/: .eslintrc.json  .prettierignore  middleware.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: client-time.tsx  filter-bar.tsx  node-detail-panel.tsx  notes-editor.tsx  selection-context.tsx  tag-selector.tsx  trajectory-graph.tsx  trajectory-timeline.tsx  trajectory-tree.tsx  trajectory-view.tsx
web/lib/: agents.ts  api.ts  auth.ts  client-api.ts  collab.ts  colors.ts  comment-counts.ts  entity-graph.ts  expand-state.ts  fetch-utils.ts  format.ts  graph-edges.ts  layout-positioning.ts  layout-sizing.ts  projects.ts  rewrites.ts  segments.ts  sequence-layout.ts  span-fields.ts  span-timing.ts  timeline-format.ts  tree.ts  triage.ts
web/tests/: _helpers.ts  agent-exports.spec.ts  agent-overview.spec.ts  agent-tabs.spec.ts  (+20 more)
(+119 files in other folders)
