[project]
name = "langperf"
version = "0.1.0"
description = "LangPerf SDK — tracer for agent trajectories"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp-proto-http>=1.28",
    "openinference-instrumentation-openai>=0.1.18",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["langperf*"]
